tests/language_modules/09_statements/valid/assignment_statement.vf
module AssignmentStatement

procedure main()
is
    let amount: Integer = 1
    amount := 2
    check amount = 2
end main

end AssignmentStatement