tests/language_modules/09_statements/invalid_syntax/let_uses_assignment_operator.vf
module LetUsesAssignmentOperator

procedure main()
is
    let amount := 1
    check true
end main

end LetUsesAssignmentOperator